crates/huak_cli/tests/snapshots/r#mod__test_help__tests__update_help.snap
---
source: crates/huak_cli/tests/test_help.rs
info:
  program: huak
  args:
    - update
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Update the project's dependencies

Usage: huak update [OPTIONS] [DEPENDENCIES]... [-- <TRAILING>...]

Arguments:
  [DEPENDENCIES]...  
  [TRAILING]...      Pass trailing arguments with `--`

Options:
  -q, --quiet  
  -h, --help   Print help

----- stderr -----

