crates/huak_cli/tests/snapshots/r#mod__test_help__tests__version_help.snap
---
source: crates/huak_cli/tests/test_help.rs
info:
  program: huak
  args:
    - version
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Display the version of the project

Usage: huak version [OPTIONS]

Options:
  -q, --quiet  
  -h, --help   Print help

----- stderr -----

